Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Core ReactOS
CORE-11023
Net utility not enumerating local user accounts
Log In
Export
XML
Word
Printable
Details
Type:
Bug
Status:
Resolved
Priority:
Major
Resolution:
Fixed
Fix Version/s:
0.4.1
Component/s:
None
Labels:
PATCH
Description
The net utility does not enumerate the users on the local machine. I have made a patch for it.
Attachments
Options
Sort By Name
Sort By Date
Ascending
Descending
Thumbnails
List
Download All
Attachments
After the patch was applied.jpg
242 kB
2016-03-26 09:07
net(NetUserEnum).patch
1 kB
2016-03-26 09:07
user enumeration error.jpg
221 kB
2016-03-26 09:07
Activity
People
Assignee:
ekohl
Reporter:
cwilson2016
Votes:
1
Vote for this issue
Watchers:
2
Start watching this issue
Dates
Created:
2016-03-26 09:07
Updated:
2016-04-06 04:34
Resolved:
2016-03-31 22:11