[NET] Net utility not enumerating local user accounts. Patch by Curtis Wilson. CORE-11023 #resolve #comment Thanks a lot!

svn path=/trunk/; revision=71087